--- a/index.html
+++ b/index.html
@@ -12,13 +12,10 @@
       rel="stylesheet"
     />
   </head>
-  <body>
-    <div class="main">Escape Room</div>
-
-    <script>
-      document.body.style.backgroundImage = `url('img/image-${
-        Math.floor(Math.random() * (5 - 1 + 1)) + 1
-      }.jpg')`;
-    </script>
+  <body class="app">
+    <div class="header">Escape Room</div>
+    <div class="main"></div>
+    <div class="ques">?</div>
+    <script src="/script.js"></script>
   </body>
 </html>
