--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     />
   </head>
   <body class="app">
-    <div class="header">Escape Room</div>
+    <div class="header">
+      <span>The Mavs Presents</span>
+      Escape Room
+    </div>
     <div class="main"></div>
     <div class="ques">?</div>
     <script src="/script.js"></script>
