added insta link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       Escape Room
     </div>
     <div class="main"></div>
-    <div class="ques">?</div>
+    <a href="https://www.instagram.com/mavericks.mnit/" class="ques">?</a>
     <script src="/script.js"></script>
   </body>
 </html>
