added insta link

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </div>
     <div class="main"></div>
     <a href="https://www.instagram.com/mavericks.mnit/" class="ques">?</a>
+    <div class="overlay"></div>
     <script src="/script.js"></script>
   </body>
 </html>
