--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     />
   </head>
   <body class="app">
+    <img src="img/logo.png" alt="logo" class="logo" />
     <div class="header">
-      <span>The Mavs Presents</span>
+      <span>The Mavericks Presents</span><br />
       Escape Room
     </div>
     <div class="main"></div>
