--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <img src="img/logo.png" alt="logo" class="logo" />
     <div class="header">
       <span>The Mavericks Presents</span><br />
-      Escape Room
+      Escape <br />
+      Room
     </div>
     <div class="main"></div>
     <a href="https://www.instagram.com/mavericks.mnit/" class="ques">?</a>
