--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
   <body class="app">
     <img src="img/logo.png" alt="logo" class="logo" />
     <div class="header">
-      <span>The Mavericks Presents</span><br />
+      <span>Presents</span><br />
       Escape <br />
       Room
     </div>
     <div class="main"></div>
     <a href="https://www.instagram.com/mavericks.mnit/" class="ques">?</a>
+    <p class="foot">The Mavericks</p>
     <div class="overlay"></div>
     <script src="/script.js"></script>
   </body>
