--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
       Room
     </div>
     <div class="main"></div>
-    <a href="https://www.instagram.com/mavericks.mnit/" class="ques">?</a>
+    <a
+      href="https://www.instagram.com/reel/C2jc8moMVrC/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+      class="ques"
+      >?</a
+    >
     <p class="foot">The Mavericks</p>
     <div class="overlay"></div>
     <script src="/script.js"></script>
